# registrator-romania

./: .env-examle  .gitignore  1.html  10.html  2.html  3.html  4.html  5.html  6.html  7.html  8.html  9.html  AYNURARSLAN-1720675184.3150005.html  BARTAN-1720675198.974786.html  DERYA-1720675185.4391453.html  DUYGU-1720675192.0995069.html  Dockerfile  EMINE-1720675188.7683456.html  ERHAN-1720675197.9023027.html  MELTEM-1720675193.251704.html  MESUT-1720675187.652087.html  MUSTAFA-1720675186.5642614.html  NESLIHAN-1720675189.841213.html  OYA-1720675194.402841.html  SALIM-1720675190.9442816.html  auto-proxy.txt  config.yml  dates.json  docker-compose.yml  programare.html  proxies.txt  pyproject.toml  rndm_users.txt  statistic-large.txt  statistic.txt  users-forsmajor.docx  users.csv  users.docx  users.txt  users.xlsx  (+2 more)
registrator_romania/: api_romania.py  bot.py  browser.py  captcha.html  captcha.py  config.py  google_spread.py  main.py  new_request_registrator.py  parser.py  proxy.py  req.py  request-registration.py  request_registration.py  scheduler.py  simple_registrator.py  sync_registration.py
scripts/: init.sh
tests/: test_registrate.py
